# gitlab-todotxt-sync

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  gitlab.rs  main.rs  todo.rs
