[package]
name = "gitlab-todotxt-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs", "io-std"] }
serde_json = "1"
regex = "1.11"
dirs = "5"
url = { version = "2", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
